objects/Community_Banner__c.object
<CustomObject>
    <fields>
        <fullName>Banner_Link__c</fullName>
        <description>URL to redirect on click of the Banner.</description>
        <inlineHelpText>Navigation Url Link for Community banners at Home page</inlineHelpText>
        <label>Navigation Url Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDisplayed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether to display Banner on the Community or not.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>This will decide in which order the Banner will be shown in the VF Page.</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Community Banner</label>
    <nameField>
        <label>Community Banner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Banners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Banner_Link__c</columns>
        <columns>IsDisplayed__c</columns>
        <columns>Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Community_Home_Page_Banners</fullName>
        <columns>NAME</columns>
        <columns>Banner_Link__c</columns>
        <columns>IsDisplayed__c</columns>
        <columns>Order__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Community Home Page Banners</label>
        <language>en_US</language>
    </listViews>
    <validationRules>
        <fullName>Banner_Active_and_Order</fullName>
        <active>false</active>
        <errorConditionFormula>AND( IsDisplayed__c ,  ISNULL(Order__c))</errorConditionFormula>
        <errorMessage>If a Banner is Active than it's Order should be defined.</errorMessage>
    </validationRules>
</CustomObject>